<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projectpinacolada.ucsd.projectpinacolada.UserProfile">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileImageButton"
        android:src="@drawable/camera_user_profile"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="40px"
        android:background="@color/primaryAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_tag"
        android:id="@+id/user_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/profileImageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/location_tag"
        android:id="@+id/user_location"
        android:layout_below="@+id/user_name"
        android:layout_marginBottom="20px"
        android:layout_toRightOf="@id/profileImageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/num_reviews"
        android:id="@+id/user_num_reviews_label"
        android:layout_below="@+id/user_location"
        android:layout_toRightOf="@id/profileImageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/zero_reviews"
        android:id="@+id/user_num_reviews"
        android:layout_alignTop="@+id/user_num_reviews_label"
        android:layout_toRightOf="@+id/user_num_reviews_label"
        android:layout_toEndOf="@+id/user_num_reviews_label" />

    <Button
        android:text="@string/update_profile"
        android:id="@+id/update_profile_button"
        android:layout_width="400px"
        android:layout_height="150px"
        android:background="@color/primaryDark"
        android:textColor="@color/primary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="400px"
        android:layout_height="150px"
        android:background="@color/primaryDark"
        android:textColor="@color/primary"
        android:text="@string/logout"
        android:id="@+id/logout_button"
        android:layout_alignBottom="@+id/update_profile_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_marginBottom="80px"
        android:layout_marginTop="80px"
        android:layout_height="wrap_content"
        android:id="@+id/listViewUserProfile"
        android:layout_below="@+id/profileImageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/update_profile_button"
        android:background="@drawable/listview_border" />

</RelativeLayout>
