<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projectpinacolada.ucsd.projectpinacolada.startscreen"
    android:background="@color/primary"
    android:clipChildren="false"
    android:clipToPadding="false"
    >



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/camera_button"
        android:background="@drawable/camera"
        android:backgroundTint="@color/primaryDark"
        android:clickable="true"
        android:layout_gravity="bottom|center_horizontal"
        android:contextClickable="false"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/userButton"
        android:layout_alignStart="@+id/userButton"
        android:layout_alignRight="@+id/userButton"
        android:layout_alignEnd="@+id/userButton"
        android:layout_marginTop="17dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userButton"
        android:background="@drawable/simpleninja"
        android:backgroundTint="@color/primaryDark"
        android:clickable="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        />




</RelativeLayout>
