<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projectpinacolada.ucsd.projectpinacolada.Register">

    <ScrollView
        android:id="@+id/registration_form_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/registration_form_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/name_tag"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="35"/>

            <EditText
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/nameField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/nameField"
                android:layout_below="@+id/nameField"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/email_tag"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="35"/>

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/emailField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/emailField"
                android:layout_below="@+id/emailField"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/password_tag"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="35"/>

            <EditText
                android:id="@+id/verifyPasswordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/passwordField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/passwordField"
                android:layout_below="@+id/passwordField"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/verify_password_tag"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="35"/>

            <EditText
                android:id="@+id/locationField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/verifyPasswordField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/verifyPasswordField"
                android:layout_below="@+id/verifyPasswordField"
                android:hint="@string/location_tag"
                android:maxLines="1"
                android:maxLength="35"
                android:singleLine="true" />

            <Button
                android:id="@+id/registerButton"
                android:layout_below="@+id/locationField"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_width="400px"
                android:layout_height="150px"
                android:textColor="@color/primary"
                android:background="@color/primaryDark"
                android:text="@string/register_tag" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
